finish all template

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <!-- end 3 -->
       </div>
       <div class="small-8 large-5 cell end">
-        <div class="flex-container align-middle">
+        <div class="grid-y align-center full-h">
           <p class="font-white font-kayak-reg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit doloremque voluptatibus id nam placeat libero vitae repellat enim. Facilis, cumque.</p>
         </div>
       </div>
@@ -165,8 +165,8 @@
 
 <!-- LAUNCH -->
 <div class="launch-soon">
-  <div class="grid-container pad-up-very-lit">
-    <div class="columns small-offset-4 small-7 medium-offset-6 medium-5 end text-center" style="margin-right:70px;">
+  <div class="grid-container pad-up-very-lit pad-down-very-lit">
+    <!-- <div class="columns small-offset-4 small-7 medium-offset-6 medium-5 end text-center" style="margin-right:70px;">
       <h1 class="font-black font-moon-2-bold">LAUNCHING SOON!</h1>
     </div>
     <div class="columns small-offset-4 small-7 medium-offset-6 medium-5 end" style="margin-right:70px;">
@@ -176,6 +176,28 @@
         </div>
         <div class="cell small-4 bg-brown text-center" style="height:120px; width:70px;">
 						<h2 class="font-navy font-moon-2-bold" id="kanan">
+        </div>
+      </div>
+    </div> -->
+    <div class="grid-x align-right">
+      <div class="cell shrink">
+        <h1 class="font-black font-moon-2-bold">LAUNCHING SOON!</h1>
+        <div class="grid-x align-center">
+          <div class="cell bg-violet text-center shrink" style="height:120px; width:70px;">
+            <div class="grid-y align-center full-h">
+  						<h2 class="font-light-brown font-kayak-reg count-font" id="kiri">
+            </div>
+          </div>
+          <div class="cell bg-brown text-center shrink" style="height:120px; width:70px;">
+            <div class="grid-y align-center full-h">
+  						<h2 class="font-violet font-kayak-reg count-font" id="kanan">
+            </div>
+          </div>
+          <div class="cell text-center shrink mar-left-very-lit">
+            <div class="grid-y align-center full-h">
+              <h2 class="font-kayak-reg mid-lit-font">Day(s) Left!</h2>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -211,7 +233,7 @@
 
 <!-- REGISTER -->
 <div id="register">
-  <div class="grid-container pad-up-lit">
+  <!-- <div class="grid-container pad-up-lit">
     <div class="cell small-10 large-8 text-center end">
       <h1 class="font-moon-2-bold">SEATS ARE LIMITED</h1>
     </div>
@@ -223,6 +245,20 @@
     <div class="cell small-8 large-6 text-center">
       <a id="regis-button" class="font-kayak-reg mar-down-very-lit">Register Now!</a>
       <p class="font-black font-kayak-reg">P.S. this event is FREE</p>
+    </div>
+  </div> -->
+  <div class="grid-container">
+    <div class="grid-x align-center text-center pad-down-very-very-lit">
+      <div class="cell small-10 large-6">
+        <h1 class="font-moon-2-bold">SEATS ARE LIMITED</h1>
+        <p class="font-moon-2-bold mini-font">Click the button to join our <span class="font-light-brown">Space Oddesy</span></p>
+      </div>
+    </div>
+    <div class="grid-x align-center text-center">
+      <div class="cell shrink small-10 large-6">
+        <button id="regis-button" class="font-kayak-reg">Register Now!</button>
+        <p class="font-black font-kayak-reg">P.S. this event is FREE</p>
+      </div>
     </div>
   </div>
 </div>
