--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 	  <link rel="stylesheet" href="css/basic.css">
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="swiper/dist/css/swiper.min.css">
+    <link rel="icon"
+      type="image/png"
+      href="favicon.ico">
   </head>
   <body>
 
