--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 	  <link rel="stylesheet" href="css/basic.css">
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="swiper/dist/css/swiper.min.css">
-    <link rel="icon"
-      type="image/png"
-      href="favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   </head>
   <body>
 
