--- a/index.html
+++ b/index.html
@@ -14,21 +14,30 @@
   <body>
 
 <!-- NAVBAR   -->
-<div class="contain-to-grid sticky">
- <div class="title-bar bg-navy" data-responsive-toggle="example-menu" data-hide-for="medium">
+<!-- <div class="contain-to-grid sticky">
+ <div class="title-bar bg-ligt-violet" data-responsive-toggle="example-menu" data-hide-for="medium">
    <button class="menu-icon" type="button" data-toggle="example-menu"></button>
  </div>
- <div class="top-bar bg-navy" id="example-menu">
-   <div class="top-bar-right bg-navy" data-topbar role="navigation" data-options="sticky_on: large">
+ <div class="top-bar bg-light-violet" id="example-menu">
+   <div class="top-bar-right bg-light-violet" data-topbar role="navigation" data-options="sticky_on: large">
      <ul class="menu small-vertical">
-      <li><a href="#home" class="font-grey font-moon-2-bold-header">Home</a></li>
-      <li><a href="#about" class="font-grey font-moon-2-bold-header">About</a></li>
-      <li><a href="#testimonials" class="font-grey font-moon-2-bold-header">Testimonials</a></li>
-      <li><a href="#sneak-peak" class="font-grey font-moon-2-bold-header">Sneak Peak</a></li>
-      <li><a href="#register" class="font-grey font-moon-2-bold-header">Register</a></li>
+      <li><a href="#home" class="font-black font-moon-2-bold-header">Home</a></li>
+      <li><a href="#about" class="font-black font-moon-2-bold-header">About</a></li>
+      <li><a href="#testimonials" class="font-black font-moon-2-bold-header">Testimonials</a></li>
+      <li><a href="#sneak-peak" class="font-black font-moon-2-bold-header">Sneak Peak</a></li>
+      <li><a href="#register" class="font-black font-moon-2-bold-header">Register</a></li>
      </ul>
    </div>
  </div>
+</div> -->
+<div class="navbar top-bar">
+  <ul class="menu top-bar-right">
+        <li><a class="font-moon-2-header font-black" href="#home">Home</a></li>
+        <li><a class="font-moon-2-header font-black" href="#about">About</a></li>
+        <li><a class="font-moon-2-header font-black" href="#testimonials">Testimonials</a></li>
+        <li><a class="font-moon-2-header font-black" href="#sneak-peak">Sneak Peak</a></li>
+        <li><a class="font-moon-2-header font-black" href="#register">Register</a></li>
+  </ul>
 </div>
 <!-- END OF NAVBAR -->
 
@@ -50,8 +59,8 @@
 <!-- WELCOME TO FASILKOM UI -->
 <div class="welcome bg-brown">
   <div class="grid-container">
-    <div class="grid-x" style="justify-content:center;">
-      <div class="medium-8 small-8 cell text-center">
+    <div class="grid-x align-center" >
+      <div class="medium-6 small-8 cell text-center">
         <img id="gbundar" src="../img/desktop/fasilkom.svg" alt="">
         <h1 class="font-moon-2-bold font-brown">WELCOME TO FASILKOM UI</h1>
         <p class="font-kayak-reg">Faculty of Computer Science Universitas Indonesia is one
@@ -264,6 +273,28 @@
   </div>
 </div>
 <!-- END OF REGISTER -->
+
+<!-- FOOTER -->
+<div id="footer" class="footer bg-navy">
+  <div class="grid-x align-spaced full-h">
+    <div class="cell auto">
+      <div class="grid-y align-center full-h">
+        <p class="nomar font-kayak-reg font-white mar-left-very-very-lit midlit-font">© Copyright, OH Fasilkom UI 2018</p>
+      </div>
+    </div>
+    <div class="cell auto">
+      <div class="grid-y align-center full-h">
+        <div class="grid-x justify-conten-middle align-right">
+          <img class="sosmed-ico" src="img/desktop/line.svg" alt="">
+          <img class="sosmed-ico" src="img/desktop/instagram.svg" alt="">
+          <img class="sosmed-ico" src="img/desktop/twitter.svg" alt="">
+          <img class="sosmed-ico" src="img/desktop/youtube.svg" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- END OF FOOTER -->
 
 
   <script src="js/vendor/jquery.js"></script>
