--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <!-- FUN-FACT -->
 <div id="fun-fact">
-  <div class="row full-vh">
+  <div class="row full-vh ">
     <div class="ver-center columns small-offset-5 small-7 medium-offset-6 medium-5 end" style="margin-right:70px;">
       <h1 class="font-violet font-moon-2-bold">FUN FACT!</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At incidunt soluta ea non perferendis culpa vero rem error modi aperiam.</p>
@@ -75,12 +75,18 @@
 <!-- END OF WELCOME TO FASILKOM UI -->
 
 <!-- WELCOME TO FASILKOM UI -->
-<div id="student-life" class="student-life bg-brown">
+<div  id="student-life" class="bg-brown pad-up-very-lit">
   <div class="grid-container">
-    <div class="grid-x" style="justify-content:center;">
-      <div class="medium-8 small-8 cell text-center">
-        <img id="" class="bor-brown" src="../img/desktop/fasilkom.svg" alt="">
-        <h1 class="font-moon-2-bold font-brown">STUDENT LIFE</h1>
+    <div class="grid-y align-center">
+      <div class="grid-x align-center">
+        <div class="medium-8 small-10 cell text-center">
+          <div class="grid-y align-center">
+            <h1 class="font-moon-2-bold font-brown nomar">STUDENT LIFE</h1>
+            <div class="responsive-embed widescreen border-embed">
+              <iframe src="https://www.youtube.com/embed/YcTHIIj2KaY" frameborder="0" allowfullscreen></iframe>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -88,7 +94,7 @@
 <!-- END OF WELCOME TO FASILKOM UI -->
 
 <!-- WELCOME TO FASILKOM UI -->
-<div id="schedule" class="schedule bg-navy pad-down-very-lit">
+<div id="schedule" class="schedule bg-navy">
   <div class="grid-container">
     <div class="grid-x pad-down-lit" style="justify-content:center;">
       <div class="medium-8 small-8 cell text-center pad-up-lit">
@@ -97,7 +103,7 @@
       </div>
     </div>
     <div class="grid-x align-center">
-      <div class="small-8 large-5 cell end">
+      <div class="small-8 medium-8 large-5 cell end">
       <!-- 1   -->
         <div class="flex-container align-middle pad-down-very-lit">
           <div class="">
@@ -129,8 +135,8 @@
         </div>
         <!-- end 3 -->
       </div>
-      <div class="small-8 large-5 cell end">
-        <div class="grid-y align-center full-h">
+      <div class="small-8 medium-8 large-5 cell end">
+        <div class="grid-y align-center full-h mar-up-mob mar-up-med">
           <p class="font-white font-kayak-reg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit doloremque voluptatibus id nam placeat libero vitae repellat enim. Facilis, cumque.</p>
         </div>
       </div>
@@ -152,7 +158,7 @@
       </div>
     </div>
   </div>
-  <div class="grid-x" style="justify-content:center;">
+  <div class="grid-x align-center">
     <div class="small-6 text-center cell carousel-testi">
       <div class="swiper-container">
         <div class="swiper-wrapper pad-down-lit">
@@ -166,7 +172,8 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus commodi laboriosam numquam repudiandae quia! Asperiores amet, fugit, molestiae qui, perferendis magnam, voluptates quae sunt at tempore modi quia eos harum!
           </div>
         </div>
-        <div class="swiper-pagination pad-up"></div>
+        <br>
+        <div class="swiper-pagination"></div>
       </div>
     </div>
   </div>
@@ -174,38 +181,27 @@
 <!-- END OF THEY SAID -->
 
 <!-- LAUNCH -->
-<div class="launch-soon">
-  <div class="grid-container pad-up-very-lit pad-down-very-lit">
-    <!-- <div class="columns small-offset-4 small-7 medium-offset-6 medium-5 end text-center" style="margin-right:70px;">
-      <h1 class="font-black font-moon-2-bold">LAUNCHING SOON!</h1>
-    </div>
-    <div class="columns small-offset-4 small-7 medium-offset-6 medium-5 end" style="margin-right:70px;">
-      <div class="grid-x align-middle timeline">
-        <div class="cell small-4 bg-violet text-center align-middle" style="height:120px; width:70px;">
-						<h2 class="font-navy font-moon-2-bold" id="kiri">
-        </div>
-        <div class="cell small-4 bg-brown text-center" style="height:120px; width:70px;">
-						<h2 class="font-navy font-moon-2-bold" id="kanan">
-        </div>
-      </div>
-    </div> -->
-    <div class="grid-x align-right">
-      <div class="cell shrink">
-        <h1 class="font-black font-moon-2-bold">LAUNCHING SOON!</h1>
-        <div class="grid-x align-center">
-          <div class="cell bg-violet text-center shrink" style="height:120px; width:70px;">
-            <div class="grid-y align-center full-h">
-  						<h2 class="font-light-brown font-kayak-reg count-font" id="kiri">
+<div id="launch-soon" class="launch-soon">
+  <div class="grid-container full-h">
+    <div class="grid-y full-h align-center">
+      <div class="grid-x align-right">
+        <div class="cell shrink">
+          <h1 class="font-black font-moon-2-bold">LAUNCHING SOON!</h1>
+          <div class="grid-x align-center">
+            <div class="cell bg-violet text-center shrink" style="height:120px; width:70px;">
+              <div class="grid-y align-center full-h">
+    						<h2 class="font-light-brown font-kayak-reg count-font" id="kiri">
+              </div>
             </div>
-          </div>
-          <div class="cell bg-brown text-center shrink" style="height:120px; width:70px;">
-            <div class="grid-y align-center full-h">
-  						<h2 class="font-violet font-kayak-reg count-font" id="kanan">
+            <div class="cell bg-brown text-center shrink" style="height:120px; width:70px;">
+              <div class="grid-y align-center full-h">
+    						<h2 class="font-violet font-kayak-reg count-font" id="kanan">
+              </div>
             </div>
-          </div>
-          <div class="cell text-center shrink mar-left-very-lit">
-            <div class="grid-y align-center full-h">
-              <h2 class="font-kayak-reg mid-lit-font">Day(s) Left!</h2>
+            <div class="cell text-center shrink mar-left-very-lit">
+              <div class="grid-y align-center full-h">
+                <h2 class="font-kayak-reg mid-lit-font">Day(s) Left!</h2>
+              </div>
             </div>
           </div>
         </div>
@@ -217,11 +213,15 @@
 
 <!-- SNEAK PEAK -->
 <div id="sneak-peak">
-  <div class="grid-container pad-up-very-lit">
-    <div class="grid-x" style="justify-content:center;">
-      <div class="medium-10 small-8 cell text-center">
-        <h1 class="font-moon-2-bold font-white">SNEAK PEAK</h1>
-        <img id="gsneak" src="../img/orang-sneak.png" alt="">
+  <div class="grid-y align-center full-h">
+    <div class="cell shrink">
+      <div class="grid-x align-center">
+        <div class="medium-8 small-10 cell text-center">
+          <h1 class="font-moon-2-bold font-white">SNEAK PEAK</h1>
+        </div>
+        <div class="medium-8 small-10 cell text-center">
+          <img id="gsneak" src="../img/orang-sneak.png" alt="">
+        </div>
       </div>
     </div>
   </div>
@@ -229,12 +229,36 @@
 <!-- END OF SNEAK PEAK -->
 
 <!-- SNEAK PEAK -->
+<!-- <div id="after-movie">
+  <div class="grid-y align-center full-h">
+    <div class="cell small-10">
+      <div class="grid-x align-center">
+        <div class="medium-8 small-10 cell text-center">
+          <div class="grid-y align-center">
+            <div class="cell">
+              <h1 class="font-moon-2-bold font-white">AFTER MOVIE <br> OPEN HOUSE FASILKOM UI 2017</h1>
+            </div>
+            <div class="cell responsive-embed widescreen border-embed">
+              <iframe src="https://www.youtube.com/embed/YcTHIIj2KaY" frameborder="0" allowfullscreen></iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div> -->
 <div id="after-movie">
-  <div class="grid-container pad-down-very-lit">
-    <div class="grid-x" style="justify-content:center;">
-      <div class="medium-10 small-8 cell text-center">
-        <h1 class="font-moon-2-bold font-white">AFTER MOVIE <br> OPEN HOUSE FASILKOM UI 2017</h1>
-        <img id="" class="bor-brown" src="../img/desktop/fasilkom.svg" alt="">
+  <div class="grid-y align-center full-h">
+    <div class="cell shrink">
+      <div class="grid-x align-center">
+        <div class="medium-8 small-10 cell text-center">
+          <h1 class="font-moon-2-bold font-white">AFTER MOVIE <br> OPEN HOUSE FASILKOM UI 2017</h1>
+        </div>
+        <div class="medium-8 small-10 cell text-center">
+          <div class="cell responsive-embed widescreen border-embed">
+            <iframe src="https://www.youtube.com/embed/YcTHIIj2KaY" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -279,7 +303,7 @@
   <div class="grid-x align-spaced full-h">
     <div class="cell auto">
       <div class="grid-y align-center full-h">
-        <p class="nomar font-kayak-reg font-white mar-left-very-very-lit midlit-font">© Copyright, OH Fasilkom UI 2018</p>
+        <p class="nomar font-kayak-reg font-white mar-left-very-very-lit midlit-font footer-font">© Copyright, OH Fasilkom UI 2018</p>
       </div>
     </div>
     <div class="cell auto">
