--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 <!-- WELCOME TO FASILKOM UI -->
 <div id="schedule" class="schedule bg-navy">
-  <div class="grid-container">
+  <!-- <div class="grid-container">
     <div class="grid-x pad-down-lit" style="justify-content:center;">
       <div class="medium-8 small-8 cell text-center pad-up-lit">
         <h1 class="font-moon-2-bold font-light-brown">OPEN HOUSE <br> FASILKOM UI 2018</h1>
@@ -104,7 +104,6 @@
     </div>
     <div class="grid-x align-center">
       <div class="small-8 medium-8 large-5 cell end">
-      <!-- 1   -->
         <div class="flex-container align-middle pad-down-very-lit">
           <div class="">
             <img class="icon" src="img/desktop/calendar.svg" alt="">
@@ -113,7 +112,6 @@
             <span class="font-moon-bold font-white schedule">Saturday, 3 November 2018</span>
           </div>
         </div>
-        <!-- 2 -->
         <div class="flex-container align-middle pad-down-very-lit">
           <div class="">
             <img class="icon" src="img/desktop/clock.svg" alt="">
@@ -122,9 +120,6 @@
             <span class="font-moon-bold font-white schedule">08.30 - SELESAI</span>
           </div>
         </div>
-        <!-- end 2 -->
-
-        <!-- 3 -->
         <div class="flex-container align-middle pad-down-very-lit">
           <div class="">
             <img class="icon" src="img/desktop/location.svg" alt="">
@@ -133,11 +128,59 @@
             <span class="font-moon-bold font-white scedule">FAKULTAS ILMU KOMPUTER UI, JAWA BARAT</span>
           </div>
         </div>
-        <!-- end 3 -->
       </div>
       <div class="small-8 medium-8 large-5 cell end">
         <div class="grid-y align-center full-h mar-up-mob mar-up-med">
           <p class="font-white font-kayak-reg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit doloremque voluptatibus id nam placeat libero vitae repellat enim. Facilis, cumque.</p>
+        </div>
+      </div>
+    </div>
+  </div> -->
+  <div class="grid-y align-center full-h">
+    <div class="cell shrink">
+      <div class="grid-x align-center">
+        <div class="cell shrink text-center">
+          <h1 class="font-moon-2-bold font-light-brown">OPEN HOUSE <br> FASILKOM UI 2018</h1>
+          <h3 class="font-kayak-reg font-sugar-brown"><em>#LetsExploreIT</em></h3>
+        </div>
+      </div>
+      <div class="grid-x align-center">
+        <div class="small-8 medium-8 large-5 cell end">
+        <!-- 1   -->
+          <div class="flex-container align-middle pad-down-very-lit">
+            <div class="">
+              <img class="icon" src="img/desktop/calendar.svg" alt="">
+            </div>
+            <div class="">
+              <span class="font-moon-bold font-white schedule">Saturday, 3 November 2018</span>
+            </div>
+          </div>
+          <!-- 2 -->
+          <div class="flex-container align-middle pad-down-very-lit">
+            <div class="">
+              <img class="icon" src="img/desktop/clock.svg" alt="">
+            </div>
+            <div class="">
+              <span class="font-moon-bold font-white schedule">08.30 - SELESAI</span>
+            </div>
+          </div>
+          <!-- end 2 -->
+
+          <!-- 3 -->
+          <div class="flex-container align-middle pad-down-very-lit">
+            <div class="">
+              <img class="icon" src="img/desktop/location.svg" alt="">
+            </div>
+            <div class="">
+              <span class="font-moon-bold font-white scedule">FAKULTAS ILMU KOMPUTER UI, JAWA BARAT</span>
+            </div>
+          </div>
+          <!-- end 3 -->
+        </div>
+        <div class="small-8 medium-8 large-5 cell end">
+          <div class="grid-y align-center full-h mar-up-mob mar-up-med">
+            <p class="font-white font-kayak-reg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit doloremque voluptatibus id nam placeat libero vitae repellat enim. Facilis, cumque.</p>
+          </div>
         </div>
       </div>
     </div>
@@ -251,10 +294,10 @@
   <div class="grid-y align-center full-h">
     <div class="cell shrink">
       <div class="grid-x align-center">
-        <div class="medium-8 small-10 cell text-center">
+        <div class="small-8 cell text-center">
           <h1 class="font-moon-2-bold font-white">AFTER MOVIE <br> OPEN HOUSE FASILKOM UI 2017</h1>
         </div>
-        <div class="medium-8 small-10 cell text-center">
+        <div class="small-8 cell text-center">
           <div class="cell responsive-embed widescreen border-embed">
             <iframe src="https://www.youtube.com/embed/YcTHIIj2KaY" frameborder="0" allowfullscreen></iframe>
           </div>
@@ -300,13 +343,13 @@
 
 <!-- FOOTER -->
 <div id="footer" class="footer bg-navy">
-  <div class="grid-x align-spaced full-h">
-    <div class="cell auto">
+  <!-- <div class="grid-x align-spaced full-h">
+    <div class="cell small-8 medium-6">
       <div class="grid-y align-center full-h">
         <p class="nomar font-kayak-reg font-white mar-left-very-very-lit midlit-font footer-font">© Copyright, OH Fasilkom UI 2018</p>
       </div>
     </div>
-    <div class="cell auto">
+    <div class="cell small-8 medium-6">
       <div class="grid-y align-center full-h">
         <div class="grid-x justify-conten-middle align-right">
           <img class="sosmed-ico" src="img/desktop/line.svg" alt="">
@@ -316,10 +359,28 @@
         </div>
       </div>
     </div>
+  </div> -->
+  <div class="grid-y align-center full-h">
+    <div class="grid-x">
+      <div class="cell small-6">
+        <div class="grid-y align-center full-h">
+          <p class="nomar font-kayak-reg font-white mar-left-very-very-lit midlit-font footer-font">© Copyright, OH Fasilkom UI 2018</p>
+        </div>
+      </div>
+      <div class="cell small-6">
+        <div class="grid-y align-center full-h">
+          <div class="grid-x justify-conten-middle align-right">
+            <img class="sosmed-ico" src="img/desktop/line.svg" alt="">
+            <img class="sosmed-ico" src="img/desktop/instagram.svg" alt="">
+            <img class="sosmed-ico" src="img/desktop/twitter.svg" alt="">
+            <img class="sosmed-ico" src="img/desktop/youtube.svg" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 <!-- END OF FOOTER -->
-
 
   <script src="js/vendor/jquery.js"></script>
   <script src="js/google.js"></script>
