edit the register section

--- a/index.html
+++ b/index.html
@@ -194,8 +194,9 @@
 <!-- END OF GOOGLE -->
 
 <!-- THEY SAID -->
-<div class="they-said bg-violet pad-down-lit">
-  <div class="grid-container">
+
+<div id="they-said" class="they-said bg-violet">
+  <!-- <div class="grid-container">
     <div class="grid-x pad-down-very-lit" style="justify-content:center;">
       <div class="medium-8 small-8 cell text-center pad-up-lit">
         <h1 class="font-moon-2-bold font-white">WHAT THEY SAID</h1>
@@ -218,6 +219,41 @@
         </div>
         <br>
         <div class="swiper-pagination"></div>
+      </div>
+    </div>
+  </div> -->
+
+  <div class="grid-y align-center full-h">
+    <div class="cell shrink">
+      <div class="grid-x align-center">
+        <div class="cell small-10 medium-6">
+          <div class="orbit" role="region" aria-label="They Said" data-orbit>
+            <div class="orbit-wrapper">
+              <ul class="orbit-container">
+                <li class="is-active orbit-slide">
+                  <figure class="orbit-figure text-center font-white font-kayak-reg">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias voluptatibus temporibus aperiam est tempora ad doloremque inventore aspernatur illo, eligendi, quisquam itaque exercitationem, voluptatum debitis consequatur dignissimos recusandae hic odit.
+                  </figure>
+                </li>
+                <li class="orbit-slide">
+                  <figure class="orbit-figure text-center font-white font-kayak-reg">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias voluptatibus temporibus aperiam est tempora ad doloremque inventore aspernatur illo, eligendi, quisquam itaque exercitationem, voluptatum debitis consequatur dignissimos recusandae hic odit.
+                  </figure>
+                </li>
+                <li class="orbit-slide">
+                  <figure class="orbit-figure text-center font-white font-kayak-reg">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias voluptatibus temporibus aperiam est tempora ad doloremque inventore aspernatur illo, eligendi, quisquam itaque exercitationem, voluptatum debitis consequatur dignissimos recusandae hic odit.
+                  </figure>
+                </li>
+              </ul>
+            </div>
+            <nav class="orbit-bullets">
+              <button class="is-active" data-slide="0"><span class="show-for-sr">First slide details.</span><span class="show-for-sr">Current Slide</span></button>
+              <button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
+              <button data-slide="2"><span class="show-for-sr">Third slide details.</span></button>
+            </nav>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -260,10 +296,10 @@
   <div class="grid-y align-center full-h">
     <div class="cell shrink">
       <div class="grid-x align-center">
-        <div class="medium-8 small-10 cell text-center">
+        <div class="large-8 medium-10 small-12 cell text-center">
           <h1 class="font-moon-2-bold font-white">SNEAK PEAK</h1>
         </div>
-        <div class="medium-8 small-10 cell text-center">
+        <div class="large-8 medium-10 small-12 cell text-center">
           <img id="gsneak" src="../img/orang-sneak.png" alt="">
         </div>
       </div>
@@ -295,7 +331,7 @@
   <div class="grid-y align-center full-h">
     <div class="cell shrink">
       <div class="grid-x align-center">
-        <div class="small-8 cell text-center">
+        <div class="medium-8 small-10 cell text-center">
           <h1 class="font-moon-2-bold font-white">AFTER MOVIE <br> OPEN HOUSE FASILKOM UI 2017</h1>
         </div>
         <div class="small-8 cell text-center">
@@ -325,20 +361,22 @@
       <p class="font-black font-kayak-reg">P.S. this event is FREE</p>
     </div>
   </div> -->
-  <div class="grid-container">
-    <div class="grid-x align-center text-center pad-down-very-very-lit">
-      <div class="cell small-10 large-6">
-        <h1 class="font-moon-2-bold">SEATS ARE LIMITED</h1>
-        <p class="font-moon-2-bold mini-font">Click the button to join our <span class="font-light-brown">Space Oddesy</span></p>
+    <div class="grid-y align-center full-h">
+      <div class="cell shrink">
+        <div class="grid-x align-center text-center">
+          <div class="cell small-10 large-6">
+            <h1 class="font-moon-2-bold">SEATS ARE LIMITED</h1>
+            <p class="font-moon-2-bold mini-font">Click the button to join our <span class="font-light-brown">Space Oddesy</span></p>
+          </div>
+        </div>
+        <div class="grid-x align-center text-center">
+          <div class="cell shrink small-10 large-6">
+            <button id="regis-button" class="font-kayak-reg">Register Now!</button>
+            <p class="font-black font-kayak-reg">P.S. this event is FREE!</p>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="grid-x align-center text-center">
-      <div class="cell shrink small-10 large-6">
-        <button id="regis-button" class="font-kayak-reg">Register Now!</button>
-        <p class="font-black font-kayak-reg">P.S. this event is FREE</p>
-      </div>
-    </div>
-  </div>
 </div>
 <!-- END OF REGISTER -->
 
