--- a/index.html
+++ b/index.html
@@ -1,123 +1,44 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en" dir="ltr">
   <head>
+    <title>Open House Fasilkom 2018</title>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Open House Fasilkom 2018</title>
     <link rel="stylesheet" href="css/foundation.css">
 	  <link rel="stylesheet" href="css/basic.css">
     <link rel="stylesheet" href="css/app.css">
-    <link rel="stylesheet" href="swiper/dist/css/swiper.min.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   </head>
   <body>
 
 <!-- NAVBAR   -->
-<div class="top-bar-container" data-sticky-container>
-<div class="sticky is-stuck" data-sticky data-options="anchor: page; marginTop: 0; stickyOn: small;">
-<div class="nav top-bar-container bg-light-violet" data-sticky-container>
-  <div class="contain-to-grid sticky sticky-topbar bg-light-violet ">
-       <div class="title-bar-right bg-light-violet" data-responsive-toggle="example-menu" data-hide-for="medium" style="padding:15px 15px 15px 0;">
-         <button class="menu-icon " type="button" data-toggle="example-menu"></button>
+<div id="navbar" class="top-bar-container" data-sticky-container>
+  <div class="sticky is-stuck" data-sticky data-options="anchor: page; marginTop: 0; stickyOn: small;">
+    <div class="top-bar-container bg-light-violet" data-sticky-container>
+      <div class="contain-to-grid sticky sticky-topbar bg-light-violet ">
+           <div class="title-bar-right bg-light-violet" data-responsive-toggle="example-menu" data-hide-for="medium" style="padding:15px 15px 15px 0;">
+             <button class="menu-icon " type="button" data-toggle="example-menu"></button>
+           </div>
+      </div>
+       <div class="top-bar bg-light-violet" id="example-menu">
+         <div class="top-bar-right bg-light-violet" data-topbar role="navigation" data-options="sticky_on: large">
+           <ul class="menu small-vertical bg-light-violet">
+            <li class="bg-light-violet"><a href="#home" class="font-black font-moon-2-bold-header">Home</a></li>
+            <li class="bg-light-violet"><a href="#fun-fact" class="font-black font-moon-2-bold-header">About</a></li>
+            <li class="bg-light-violet"><a href="#they-said" class="font-black font-moon-2-bold-header">Testimonials</a></li>
+            <li class="bg-light-violet"><a href="#sneak-peak" class="font-black font-moon-2-bold-header">Sneak Peak</a></li>
+            <li class="bg-light-violet"><a href="#register" class="font-black font-moon-2-bold-header">Register</a></li>
+           </ul>
+         </div>
        </div>
-  </div>
-   <div class="top-bar bg-light-violet" id="example-menu">
-     <div class="top-bar-right bg-light-violet" data-topbar role="navigation" data-options="sticky_on: large">
-       <ul class="menu small-vertical bg-light-violet">
-        <li class="bg-light-violet"><a href="#home" class="font-black font-moon-2-bold-header">Home</a></li>
-        <li class="bg-light-violet"><a href="#about" class="font-black font-moon-2-bold-header">About</a></li>
-        <li class="bg-light-violet"><a href="#testimonials" class="font-black font-moon-2-bold-header">Testimonials</a></li>
-        <li class="bg-light-violet"><a href="#sneak-peak" class="font-black font-moon-2-bold-header">Sneak Peak</a></li>
-        <li class="bg-light-violet"><a href="#register" class="font-black font-moon-2-bold-header">Register</a></li>
-       </ul>
-     </div>
-   </div>
-  </div>
-</div>
-</div>
-</div>
-
-<!-- <div data-sticky-container>
-  <div class="sticky" data-sticky data-margin-top="0">
-      <div class="title-bar" data-responsive-toggle="example-menu" data-hide-for="medium">
-          <button class="menu-icon" type="button" data-toggle="example-menu"></button>
-          <div class="title-bar-title">Menu</div>
-      </div>
-
-      <div class="top-bar" id="example-menu">
-          <div class="top-bar-left">
-              <ul class="dropdown menu" data-dropdown-menu>
-                  <li class="menu-text">Site Title</li>
-                  <li>
-                      <a href="#">One</a>
-                      <ul class="menu vertical">
-                          <li><a href="#">One</a></li>
-                          <li><a href="#">Two</a></li>
-                          <li><a href="#">Three</a></li>
-                      </ul>
-                  </li>
-                  <li><a href="#">Two</a></li>
-                  <li><a href="#">Three</a></li>
-              </ul>
-          </div>
-          <div class="top-bar-right">
-              <ul class="menu">
-                  <li><input type="search" placeholder="Search"></li>
-                  <li><button type="button" class="button">Search</button></li>
-              </ul>
-          </div>
-      </div>
-  </div>
-</div> -->
-<!-- Add a Sticky Menu -->
-<!-- <div class="top-bar-container" data-sticky-container>
-    <div class="sticky" data-sticky data-options="anchor: page; marginTop: 0; stickyOn: small;">
-      <div class="top-bar">
-        <div class="row column">
-          <div class="top-bar-left">
-            <ul class="dropdown menu" data-dropdown-menu>
-              <li class="menu-text">Site Title</li>
-              <li class="has-submenu">
-                <a href="#">One</a>
-                <ul class="submenu menu vertical" data-submenu>
-                  <li><a href="#">One</a></li>
-                  <li><a href="#">Two</a></li>
-                  <li><a href="#">Three</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Two</a></li>
-              <li><a href="#">Three</a></li>
-            </ul>
-          </div>
-          <div class="top-bar-right">
-            <ul class="menu">
-              <li>
-                <input type="search" placeholder="Search">
-              </li>
-              <li>
-                <button type="button" class="button">Search</button>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
     </div>
-  </div> -->
-
-<!-- <div class="navbar top-bar bg-light-violet">
-  <ul class="menu top-bar-right bg-light-violet">
-        <li class="bg-light-violet"><a class="font-moon-2-header font-black" href="#home">Home</a></li>
-        <li class="bg-light-violet"><a class="font-moon-2-header font-black" href="#about">About</a></li>
-        <li class="bg-light-violet"><a class="font-moon-2-header font-black" href="#testimonials">Testimonials</a></li>
-        <li class="bg-light-violet"><a class="font-moon-2-header font-black" href="#sneak-peak">Sneak Peak</a></li>
-        <li class="bg-light-violet"><a class="font-moon-2-header font-black" href="#register">Register</a></li>
-  </ul>
-</div> -->
+  </div>
+</div>
 <!-- END OF NAVBAR -->
 
 <!-- HOME -->
-<div id="home" class="home"></div>
+<div id="home" class="f-h"></div>
 <!-- END OF HOME -->
 
 <!-- FUN-FACT -->
@@ -148,7 +69,7 @@
 <!-- END OF WELCOME TO FASILKOM UI -->
 
 <!-- WELCOME TO FASILKOM UI -->
-<div  id="student-life" class="bg-brown pad-up-very-lit">
+<div  id="student-life" class="bg-brown">
   <div class="grid-x align-center align-middle f-h">
     <div class="medium-6 small-8 cell text-center">
       <h1 class="font-moon-2-bold font-brown nomar">STUDENT LIFE</h1>
@@ -273,26 +194,6 @@
       </div>
     </div>
   </div>
-  <!-- <div class="grid-x align-middle align-right h-h">
-    <div class="cell-8">
-      <div class="grid-y align-center align-middle">
-        <div class="cell shrink">
-          <h1 class="font-black font-moon-2-bold">LAUNCHING SOON!</h1>
-        </div>
-        <div class="cell shrink">
-          <div class="grid-x align-center-align-middle">
-            <div class="cell shrink">
-              <p class="font-light-brown font-kayak-reg count-font" id="kiri">
-              <p class="font-violet font-kayak-reg count-font" id="kanan">
-            </div>
-            <div class="cell shrink">
-              <p>Day(s) Left!</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> -->
 </div>
 <!-- END OF LAUNCH -->
 
@@ -350,7 +251,7 @@
     <div class="cell small-6">
         <p class="nomar font-kayak-reg font-white midlit-font footer-font">© Copyright, OH Fasilkom UI 2018</p>
     </div>
-    <div class="cell small-6">
+    <div class="cell small-6 align-self-right text-right">
       <img class="sosmed-ico" src="img/desktop/line.svg" alt="">
       <img class="sosmed-ico" src="img/desktop/instagram.svg" alt="">
       <img class="sosmed-ico" src="img/desktop/twitter.svg" alt="">
@@ -367,80 +268,8 @@
   <script src="js/vendor/foundation.js"></script>
   <script src="js/app.js"></script>
 	<script src="js/count.js"></script>
+	<script src="js/navbar.js"></script>
+	<script src="js/vertical-navbar.js"></script>
 
-  <!-- <script type="text/javascript">
-      // When the DOM is ready, run this function
-      $(document).ready(function() {
-        //Set the carousel options
-          $('#quotes').carousel({
-            pause: true,
-            interval: 4000,
-          });
-      });
-	(function ($) {
-		  $(document).ready(function(){
-
-			// hide .navbar first
-			$(".nav").hide();
-
-			// fade in .navbar
-			$(function () {
-				$(window).scroll(function () {
-		            // set distance user needs to scroll before we fadeIn navbar
-					if ($(this).scrollTop() > 650) {
-						$('.nav').fadeIn();
-					} else {
-						$('.nav').fadeOut();
-					}
-				});
-
-
-			});
-
-		});
-		  }(jQuery));
-    $(document).ready(function(){
-  		// Add scrollspy to <body>
-  		$('body').scrollspy({target: ".navbar", offset: 50});
-
-  		// Add smooth scrolling on all links inside the navbar
-  		$("#myNavbar a").on('click', function(event) {
-    	// Make sure this.hash has a value before overriding default behavior
-	    	if (this.hash !== "") {
-	      		// Prevent default anchor click behavior
-	      		event.preventDefault();
-
-	      		// Store hash
-	      		var hash = this.hash;
-
-	      		// Using jQuery's animate() method to add smooth page scroll
-	      		// The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
-	      		$('html, body').animate({
-	        		scrollTop: $(hash).offset().top
-	    			}, 800, function(){
-
-	     				// Add hash (#) to URL when done scrolling (default click behavior)
-	        			window.location.hash = hash;
-	      		});
-	   		}  // End if
-  		});
-	});
-  </script> -->
-  <script>
-  jQuery(document).ready(function($) {
-    var alterClass = function() {
-      var ww = document.body.clientWidth;
-      if (ww < 640) {
-        $('.menu').addClass('vertical');
-      } else if (ww >= 640) {
-        $('.menu').removeClass('vertical');
-      };
-    };
-    $(window).resize(function(){
-      alterClass();
-    });
-    //Fire it when the page first loads:
-    alterClass();
-  });  </script>
 </body>
 </html>
