--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <link rel="stylesheet" href="css/app.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   </head>
-  <body>
-
+<body>
 <!-- NAVBAR   -->
 <div id="navbar" class="top-bar-container" data-sticky-container>
   <div class="sticky is-stuck" data-sticky data-options="anchor: page; marginTop: 0; stickyOn: small;">
@@ -96,7 +95,7 @@
     <div class="cell small-10 large-5">
       <div class="grid-x align-left align-middle">
          <div class="cell shrink">
-              <img class="icon" src="img/desktop/calendar.svg" alt="">
+              <img class="icon" src="img/icon/calendar.svg" alt="">
          </div>
          <div class="cell shrink">
               <span class="font-moon-bold font-white schedule">Saturday, 3 November 2018</span>
@@ -105,7 +104,7 @@
       <br>
       <div class="grid-x align-left align-middle">
          <div class="cell shrink">
-              <img class="icon" src="img/desktop/clock.svg" alt="">
+              <img class="icon" src="img/icon/clock.svg" alt="">
          </div>
          <div class="cell shrink">
               <span class="font-moon-bold font-white">08.30 - SELESAI</span>
@@ -114,7 +113,7 @@
       <br>
       <div class="grid-x align-left align-middle">
          <div class="cell shrink">
-              <img class="icon" src="img/desktop/location.svg" alt="">
+              <img class="icon" src="img/icon/location.svg" alt="">
          </div>
          <div class="cell shrink">
               <span class="font-moon-bold font-white">FAKULTAS ILMU KOMPUTER UI, JAWA BARAT</span>
@@ -200,10 +199,9 @@
 <!-- SNEAK PEAK -->
 <div id="sneak-peak">
   <div class="grid-x align-center align-middle f-h">
-    <div class="cell small-8 text-center">
-        <h1 class="font-moon-2-bold font-white">SNEAK PEAK</h1>
-        <img id="gsneak" src="../img/orang-sneak.png" alt="">
-      </div>
+    <div class="cell small-12 medium-8 text-center">
+      <h1 class="font-moon-2-bold font-white">SNEAK PEAK</h1>
+      <img id="gsneak" src="../img/orang-sneak.png" alt="">
     </div>
   </div>
 </div>
@@ -212,8 +210,8 @@
 <!-- SNEAK PEAK -->
 <div id="after-movie">
   <div class="grid-x align-center align-middle f-h">
-    <div class="cell small-6">
-      <div class="medium-8 small-10 cell text-center">
+    <div class="cell small-10 medium-8 large-6">
+      <div class="medium-8 small-12 cell text-center">
         <h1 class="font-moon-2-bold font-white">AFTER MOVIE <br> OPEN HOUSE FASILKOM UI 2017</h1>
         <div class="cell responsive-embed widescreen border-embed">
           <iframe src="https://www.youtube.com/embed/YcTHIIj2KaY" frameborder="0" allowfullscreen></iframe>
@@ -252,10 +250,10 @@
         <p class="nomar font-kayak-reg font-white midlit-font footer-font">© Copyright, OH Fasilkom UI 2018</p>
     </div>
     <div class="cell small-6 align-self-right text-right">
-      <img class="sosmed-ico" src="img/desktop/line.svg" alt="">
-      <img class="sosmed-ico" src="img/desktop/instagram.svg" alt="">
-      <img class="sosmed-ico" src="img/desktop/twitter.svg" alt="">
-      <img class="sosmed-ico" src="img/desktop/youtube.svg" alt="">
+      <img class="sosmed-ico" src="img/icon/line.svg" alt="">
+      <img class="sosmed-ico" src="img/icon/instagram.svg" alt="">
+      <img class="sosmed-ico" src="img/icon/twitter.svg" alt="">
+      <img class="sosmed-ico" src="img/icon/youtube.svg" alt="">
     </div>
   </div>
 </div>
